# submission-contract

./: .gitignore  README.md
stellar/: .gitignore  Cargo.toml  README.md
stellar/contracts/takumi_pay/: Cargo.toml
stellar/contracts/takumi_pay/src/: admin.rs  config.rs  errors.rs  events.rs  lib.rs  merchant.rs  point.rs  test.rs  transaction.rs  treasury.rs  types.rs  util.rs  withdraw.rs
stellar/deployments/testnet/: usdc-test-asset.json  v1.json  v2.json
stellar/scripts/: build.sh  deploy.sh  initialize.sh
