[package]
name = "takumi-pay"
version = "0.1.0"
description = "TakumiPay Soroban contract — merchant payments, transactions, point deposits"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "takumi_pay"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_family, values("wasm"))'] }
